--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -19,16 +19,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Docker login
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Setup Go Faster
+        uses: WillAbides/setup-go-faster@v1.14.0
+        with:
+         go-version: 1.22.5
 
-      - name: Build project image
+      - name: Build project binary
         working-directory: ./web
-        run: docker build -t $WEB_IMAGE_TAG .
-
-      - name: Push images to Docker Hub
         run: |
-          docker push $WEB_IMAGE_TAG
+          go build -o nff main.go
+
+      - name: Upload binary as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: nff
+          path: ./web/nff
 
   migrate:
     needs: build
@@ -54,7 +59,6 @@ jobs:
       - migrate
     runs-on: ubuntu-latest
     env:
-      WEB_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd:${{ github.sha }}
       PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
       HOSTNAME: ${{ secrets.EC2_SSH_HOST_2 }}
       USER_NAME: ${{ secrets.EC2_USER_NAME }}
@@ -62,32 +66,33 @@ jobs:
       ELASTICACHE_URL: ${{ secrets.ELASTICACHE_URL }}
       SS_API_BASE_URL: ${{ secrets.SS_API_BASE_URL }}
     steps:
-      - name: Set up SSH
+      - name: Set up private key
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
 
-      - name: Connect to EC2 instance and deploy
+      - name: Download binary artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: nff
+          path: ./nff
+
+      - name: Transfer binary to EC2
+        run: |
+          scp -o StrictHostKeyChecking=no -i private_key.pem ./nff ${USER_NAME}@${HOSTNAME}:/home/${USER_NAME}/
+      
+      - name: Deploy binary on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
-            docker system prune -af --volumes &&
-            docker ps -q | xargs -r docker stop &&
-            docker ps -q | xargs -r docker rm &&
-            docker run \
-              --rm \
-              --detach \
-              --name nff-web \
-              -p 80:8080 \
-              -p 443:8080 \
-              -p 8080:8080 \
-              -e PORT=8080 \
-              -e START_FRESH=true \
-              -e TZ=America/Sao_Paulo \
-              -e DB_URL=$RDS_DB_URL \
-              -e REDIS_URL=$ELASTICACHE_URL \
-              -e SS_API_BASE_URL=$SS_API_BASE_URL \
-              $WEB_IMAGE_TAG &&
-            docker system prune -af --volumes
+            chmod +x nff &&
+            sudo killall nff || true &&
+            export DB_URL=$RDS_DB_URL &&
+            export REDIS_URL=$ELASTICACHE_URL &&
+            export SS_API_BASE_URL=$SS_API_BASE_URL &&
+            export START_FRESH=true &&
+            export TZ=America/Sao_Paulo &&
+            export PORT=80 &&
+            nohup ./nff > nff.log 2>&1 &
           "
 
       - name: Clean up private key
